# mLib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.app  README.md  README.txt  TODO.txt  mLib.natvis
data/shaders/: defaultBasic.hlsl  defaultCanvas.hlsl
fluid/: fluid.sln  fluid.vcxproj  fluid2D.cpp  fluid2D.h  main.h  vizzer.cpp  vizzer.h
fluid/shaders/: fluid.shader
frameworkD3D11/: frameworkD3D11.vcxproj  vizzer.cpp
frameworkD3D11/shaders/: test.shader
include/: core-base.h  core-math.h  mLibANN.h  mLibBoost.h  mLibCore.cpp  mLibCore.h  mLibD3D11.cpp  mLibD3D11.h  mLibDepthCamera.cpp  mLibDepthCamera.h  mLibEigen.h  mLibFreeImage.h  mLibLodePNG.cpp  mLibLodePNG.h  mLibOpenMesh.h  mLibZLib.cpp  mLibZLib.h  mlibCGAL.h
include/application-base/: applicationWin32.h  graphicsAsset.h  graphicsDevice.h  windowWin32.h
include/application-d3d11/: D3D11AssetRenderer.h  D3D11Buffer.cpp  D3D11Buffer.h  D3D11Buffer.inl  D3D11Buffer.tpp  D3D11Canvas2D.h  D3D11ConstantBuffer.h  D3D11GeometryShader.h  D3D11GraphicsDevice.h  D3D11PixelShader.h  D3D11PointCloud.h  D3D11RenderTarget.h  D3D11ShaderManager.h  D3D11Texture.h  D3D11Texture2D.h  D3D11Texture2D.tpp  D3D11Texture3D.cpp  D3D11Texture3D.h  D3D11Texture3D.tpp  D3D11TriMesh.h  D3D11Utility.h  D3D11VertexShader.h  graphicsDeviceD3D11.h
include/core-base/: baseImage.h  baseImageHelper.h  binaryGrid3.h  binaryGrid3d.h  classList.h  common.h  console.h  distanceField3.h  grid.cpp  grid.h  grid2.cpp  grid2.h  grid2.inl  grid2d.cpp  grid2d.h  grid3.cpp  grid3.h  grid3.inl  grid3d.cpp  grid3d.h  string.h  vector.cpp  vector.h
include/core-graphics/: RGBColor.h  boundingBox.h  boundingBox2.h  boundingBox2d.h  boundingBox3.h  boundingBox3d.h  camera.cpp  camera.h  camera.inl  cameraTrackball.h  colorUtils.h  dist.h  intersection.h  line2.h  lineSegment2.h  lineSegment2d.h  lineSegment3.h  lineSegment3d.h  orientedBoundingBox2.h  orientedBoundingBox3.h  orientedBoundingBox3d.h  plane.h  polygon.cpp  polygon.h  ray.h  triangle.h
include/core-math/: PCA.cpp  PCA.h  PCA.tpp  blockedPCA.cpp  blockedPCA.h  blockedPCA.tpp  denseMatrix.cpp  denseMatrix.h  denseMatrix.tpp  eigenSolver.h  eigenSolver.inl  eigenSolver.tpp  kMeansClustering.h  linearSolver.h  mathUtil.h  mathVector.h  matrix2x2.h  matrix3x3.h  matrix4.cpp  matrix4.h  matrix4x4.h  point1d.h  point2d.h  point3d.h  point4d.h  point6d.h  quaternion.h  rng.h  sampling.h  sparseMatrix.cpp  sparseMatrix.h  sparseMatrix.tpp  vec1.h  vec2.h  vec3.h  vec4.h  vec6.h  vector.h
include/core-mesh/: TriMeshCollisionAccelerator.inl  material.h  meshData.cpp  meshData.h  meshIO.cpp  meshIO.h  meshShapes.cpp  meshShapes.h  meshUtil.h  plyHeader.h  pointCloud.cpp  pointCloud.h  pointCloudIO.cpp  pointCloudIO.h  triMesh.cpp  triMesh.h  triMeshAccelerator.h  triMeshAcceleratorBVH.h  triMeshAcceleratorBruteForce.h  triMeshCollisionAccelerator.h  triMeshOld.h  triMeshRayAccelerator.h  triMeshRayAccelerator.inl  triMeshSampler.h  triangleBVHAccelerator.h
include/core-multithreading/: mutex.h  taskList.h  threadPool.cpp  threadPool.h  workerThread.cpp  workerThread.h
include/core-network/: networkServer.h
include/core-util/: UIConnection.h  baseImage.h  baseImageHelper.h  binaryDataBuffer.h  binaryDataCompressor.h  binaryDataSerialize.h  binaryDataStream.h  calibratedSensorData.h  clock.h  colorGradient.h  commandLineReader.h  directory.h  eventMap.h  keycodes.h  nearestNeighborSearch.h  parameterFile.h  pipe.h  sparseGrid3.h  sparseGrid3d.h  stringUtil.h  stringUtilConvert.h  textWriter.h  timer.h  uniformAccelerator.h  utility.h  windowsUtil.h
include/ext-ANN/: nearestNeighborSearchANN.h
include/ext-boost/: serialization.h
include/ext-cgal/: cgalWrapper.h
include/ext-d3d11font/: D3D11Font.h
include/ext-depthcamera/: calibratedSensorData.h  sensorData.h
include/ext-eigen/: eigenSolver.h  eigenUtility.h
include/ext-flann/: nearestNeighborSearchFLANN.h
include/ext-freeimage/: freeImageWrapper.h  freeImageWrapperHelper.h
include/ext-lodepng/: imageLoaderLodePNG.h
include/ext-mbase/: mBase.h
include/ext-openmesh/: loader.h  triMesh.h
include/ext-zlib/: ZLibWrapper.h
include/graphicsdevice-base/: applicationWin32.h  graphicsDevice.h
msvc/: OpenMesh_Debug.props  OpenMesh_Release.props
src/: core-base.cpp
src/application-base/: applicationWin32.cpp  windowWin32.cpp
src/application-d3d11/: D3D11AssetRenderer.cpp  D3D11Buffer.cpp  D3D11Canvas2D.cpp  D3D11GeometryShader.cpp  D3D11GraphicsDevice.cpp  D3D11PixelShader.cpp  D3D11PointCloud.cpp  D3D11RenderTarget.cpp  D3D11ShaderManager.cpp  D3D11Texture.cpp  D3D11Texture2D.cpp  D3D11Texture3D.cpp  D3D11TriMesh.cpp  D3D11Utility.cpp  D3D11VertexShader.cpp  (+1 more)
test/: Makefile  broken.cpp  mLibInclude.h  mLibSource.cpp  main.cpp  main.h  notes.txt  test.h  testANN.h  testBinaryStream.h  testBox.h  testCGAL.h  testCore.vcxproj  testCore.vcxproj.filters  testGrid.h  testLodePNG.h  testMath.h  testOpenMesh.h  testString.h  testUtility.h  testVector.h
testD3D11/: appTest.cpp  appTest.h  mLibInclude.h  main.h  testD3D11.sln  testD3D11.vcxproj  testD3D11.vcxproj.filters  winMain.cpp
testLinux/: mLibTest
testWindows/: main.cpp  testANN.h  testCore.vcxproj.filters  testGrid.h  testMath.h  testString.h  testUtility.h
webpagePapers/: mLibSource.cpp  main.h  webpagePapers.sln  webpagePapers.vcxproj  webpagePapers.vcxproj.filters
(+58 files in other folders)
